# fleet-mdm

./: .gitignore  AGENTS.md  CLONE_FEATURES.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md  pyproject.toml
.clone_memory_archive/: PROJECT_MEMORY-20260212T164047Z.md  PROJECT_MEMORY-20260212T181033Z.md
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md
examples/: device.json  policy.yaml
examples/exporters/: README.md  _util.py  linux_inventory.py  macos_inventory.py
src/fleetmdm/: __init__.py  __main__.py  cli.py  crypto.py  csvutil.py  inventory.py  policy.py  report.py  store.py
tests/: test_cli.py  test_drift.py  test_inventory.py  test_policy.py  test_policy_assignments.py  test_policy_targets.py  test_store.py
